cabal-version:       2.4
name:                adventofcode2021
version:             0.1.0.0
homepage:            https://github.com/githubuser/adventofcode2021#readme
license:             ISC
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md

library
  hs-source-dirs:      common
  default-language:    Haskell2010

  exposed-modules:
    Advent,
    Utils
  
  build-depends:
    base         ^>= 4.15,
    containers   ^>= 0.6,
    filepath,
    parsec,
    word8,
    bytestring,
    cryptohash-md5,
    base16-bytestring,
    benchpress

common day
  build-depends:       adventofcode2021, base
  default-language:    Haskell2010


executable day01
  import:           day
  main-is:          Day01.hs
  hs-source-dirs:   challenges
  build-depends:    containers, split

executable day02
  import:           day
  main-is:          Day02.hs
  hs-source-dirs:   challenges
  build-depends:    containers

executable day03
  import:           day
  main-is:          Day03.hs
  hs-source-dirs:   challenges
  build-depends:    containers, split

executable day04
  import:           day
  main-is:          Day04.hs
  hs-source-dirs:   challenges
  build-depends:    containers, split

executable day05
  import:           day
  main-is:          Day05.hs
  hs-source-dirs:   challenges
  build-depends:    unordered-containers >= 0.2.19, split

executable day06
  import:           day
  main-is:          Day06.hs
  hs-source-dirs:   challenges
  build-depends:    containers

executable day07
  import:           day
  main-is:          Day07.hs
  hs-source-dirs:   challenges
  build-depends:    containers

executable day08
  import:           day
  main-is:          Day08.hs
  hs-source-dirs:   challenges
  build-depends:    containers, array

executable day09
  import:           day
  main-is:          Day09.hs
  hs-source-dirs:   challenges
  build-depends:    containers

executable day10
  import:           day
  main-is:          Day10.hs
  hs-source-dirs:   challenges
  build-depends:    containers, split

executable day11
  import:           day
  main-is:          Day11.hs
  hs-source-dirs:   challenges
  build-depends:    containers, mtl

executable day12
  import:           day
  main-is:          Day12.hs
  hs-source-dirs:   challenges
  build-depends:    containers, array

executable day13
  import:           day
  main-is:          Day13.hs
  hs-source-dirs:   challenges
  build-depends:    containers, parsec, split

executable day14
  import:           day
  main-is:          Day14.hs
  hs-source-dirs:   challenges
  build-depends:    unordered-containers >= 0.2.19, split

